applications/davis/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: davis-http-https-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
