applications/davis/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: davis
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: davis
  template:
    metadata:
      labels:
        app: davis
    spec:
      containers:
        - name: davis
          image: ghcr.io/tchapi/davis:edge
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
