applications/davis/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: davis
spec:
  selector:
    app: davis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
